css/common.css
/* ... */
body .qsm-popup__btn-primary {
	background-color: #00449e;
	color: #fff;
}
.qsm_image_result_caption,
.qsm_image_result_caption_default {
	background-color: white;
	display: block;
	width: 100%;
	box-sizing: border-box;
	padding: 5px 5px 5px 27px;
}
.question-type-polar-s .ui-widget-content {
	background: #a5a5a5;
	border-color: #a5a5a5;
	border-radius: 0;
	height: 20px;
}
.question-type-polar-s .ui-widget-content .ui-slider-handle {
	background: rgb(119, 113, 113);
	height: 32px;
	border-color: rgb(119, 113, 113);
	top: -7px;
	border-radius: 0px;
	text-decoration: none;
	color: #fff !important;
	display: flex;
	justify-content: center;
	width: 25px;
	line-height: 30px;
	position: relative;
}
.site .question-type-polar-s a.ui-state-focus:focus {
	background: rgba(119, 113, 113, 1);
	border-color: rgb(119, 113, 113, 1);
	text-decoration: none;
}
.qsm-deselect-answer {
	float: right;
	position: absolute;
	right: 0;
	bottom: 0;
}
.qsm-popup__btn-primary {
	margin-right: 30px;
}
.submit-the-form {
	margin-left: 15px !important;
}
body .qsm-popup__container {
	padding-top: 40px;
	padding-bottom: 50px;
}
body .qsm-popup__header {
	text-align: left;
}
body .qsm-popup .qsm-popup__btn {
	font-size: 16px;
	padding-left: 15px;
	padding-right: 15px;
	padding-top: 10px;
	padding-bottom: 10px;
}
body #modal-3.qsm-popup .qsm-popup__content,
body .qsm-popup__content {
	text-align: center;
}
body .qsm-popup__content > img {
	display: inline-block;
	width: 70px;
}
body .qsm-popup__content > p.qsm-time-up-text {
	font-weight: bold;
	font-size: 24px;
	margin-top: 10px;
	font-family: inherit;
}
footer.qsm-popup__footer {
	text-align: center;
	padding: 10px;
}
footer.qsm-popup__footer button.qsm-popup-secondary-button {
	background-color: #808080 !important;
}
footer.qsm-popup__footer button.qsm-popup-secondary-button:hover {
	background-color: #808080 !important;
	opacity: 0.9;
}
.qsm-quiz-container select,
.qsm-quiz-container input[type=checkbox],
.qsm-quiz-container input[type=radio] {
	cursor: pointer;
}
.qmn_accept_answers input[type=checkbox] {
	vertical-align: top;
	position: relative;
	bottom: -5px;
}
.qsm-quiz-container .qsm-contact-type-checkbox {
	display: flex;
	align-items: center;
	flex-wrap: nowrap;
	align-content: center;
}
.qsm-quiz-container .qsm-contact-type-checkbox input {
	margin: 0 5px 9px 3px;
}
.mlw_qmn_question_number {
	font-weight: bold;
}
.quiz_section .mlw_qmn_new_question {
	font-weight: bold;
	display: inline;
	width: auto;
	margin-bottom: 10px;
}
.quiz_section .mlw_qmn_new_question .qsm-question-title-label {
	display: inline;
}
.quiz_section .mlw_qmn_question.qsm_remove_bold {
	font-weight: normal;
	display: block;
	margin-bottom: 10px;
	position: relative;
}
.qsm-quiz-container .quiz_section .qsm-align-fill-in-blanks:not(.qsm_remove_bold) {
	display: inline-block;
}
.quiz_section iframe {
	width: 100% !important;
	min-height: 315px !important;
}
.qsm-progress-bar .progressbar-text {
	font-size: 13px;
    font-weight: bold;
    color: rgb(52, 152, 219);
    width: 50px;
    margin-left: 10px;
}
.qsm-progress-bar{
	display: flex;
	flex-direction: row-reverse;
    align-items: center;
	padding: 0;
}
.qsm-progress-bar-container {
    position: relative;
    flex: 1;
    height: 8px;
    background: #e9ecef;
    border-radius: 4px;
    overflow: hidden;
}

.qsm-progress-fill {
    height: 100%;
    background: linear-gradient(90deg, #3498db, #2980b9);
    border-radius: 4px;
    width: 0%;
    max-width: 100%;
}

.progressbar-text {
    font-weight: bold;
    font-size: 13px;
    color: rgb(52, 152, 219);
    white-space: nowrap;
    min-width: 40px;
    text-align: center;
}
.quiz_section .mlw-file-upload-error-msg {
	color: red;
	display: block;
}
.quiz_section .mlw-file-upload-error-msg.mlw-file-upload-success-msg {
	color: green;
	display: block;
}
.quiz_section .qsm-file-upload-container {
	border: 3px dashed rgba(84, 116, 130, 0.32);
    padding: 15px;
    background: #EBEEF0;
    border-radius: 5px;
    max-width: 300px;
	cursor: pointer;
	position: relative;
}
.quiz_theme_default .qsm-file-upload-status{
	max-width: 300px;
}
.quiz_section .qsm-file-upload-container.file-hover,
.quiz_section .qsm-file-upload-container:hover {
	border: 3px solid #229ACD;
	padding: 15px;
}

.quiz_section .qsm-file-upload-container.file-hover {
	background-color: lightgray;
}
.quiz_section .qsm-file-upload-container .qsm-file-upload-logo {
	font-size: 45px;
    height: 100%;
    width: 100%;
    color: #8FA0AA;
}
.quiz_section .qsm-file-upload-container .qsm-file-upload-message {
	text-align: center;
	font-size: 14px;
	color: #555;
}
.quiz_section .qsm-file-upload-container .qsm-file-upload-message a {
	color: #8FA0AA;
    text-decoration: none;
    font-weight: bold;
}
.quiz_section .qsm-file-upload-container .qsm-file-upload-name {
    text-align: center;
    font-size: 14px;
    padding: 5px;
    font-weight: bold;
    color: #555;
    overflow-wrap: anywhere;
}
.quiz_section .qsm-file-upload-status {
    display: none;
    margin: 5px 0;
    text-align: center;
    font-size: 15px;
    padding: 5px;
}
.qsm-processing {
	background-color: rgb(219, 218, 218);
	color: black;
	font-weight: 600;
}
.qsm-error {
	background-color: rgb(255, 221, 221);
	color: red;
}

.qsm-success {
	background-color: rgb(221, 255, 221);
	color: green;
}
.quiz_section .qsm-file-upload-container .remove-uploaded-file {
	color: red;
	display: inline-block;
	cursor: pointer;
	margin-top: 5px;
	border: 1px solid red;
	border-radius: 50%;
    position: absolute;
    right: 5px;
    top: 0;
	width: 22px;
    height: 22px;
}

.qsm-admin-i-understand-warning {
	display: flex;
	gap: 20px;
	align-items: center;
}
/**
* Design for new template variable QUESTION_WITH_ANSWER
*/

.mlw_qmn_question .qmn_user_incorrect_answer {
	display: block;
	color: #dc3232;
	margin-bottom: 5px;
	padding-left: 10px;
}
/* ... */

